<resources>
    <string name="app_name">Todo List</string>
    <string name="form_add_title">Ajouter :</string>
    <string name="form_add_title_field">Titre</string>
    <string name="form_add_content_field">Contenu</string>
    <string name="form_add_submit">Ajouter la tache</string>
    <string name="no_selected_task">Aucune tache selectionné.</string>
    <string name="delete_task">Delete</string>
    <string name="form_toggle">+</string>
</resources>
