<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="fr.nbrignol.todolist.MainActivity">

    <LinearLayout

        android:id="@+id/form_add"
        android:orientation="vertical"
        android:padding="@dimen/block_padding"
        android:background="@color/lightColor"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/form_add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/form_add_title" />

        <EditText
            android:id="@+id/form_add_title_field"
            android:hint="@string/form_add_title_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/form_add_content_field"
            android:hint="@string/form_add_content_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/form_add_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_add_submit" />

    </LinearLayout>

    <TextView
        android:id="@+id/selected_task"

        android:padding="@dimen/block_padding"
        android:background="@color/lightColor"

        android:layout_marginTop="@dimen/block_padding"
        android:layout_marginBottom="@dimen/block_padding"

        android:text="@string/no_selected_task"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/task_list"

        android:padding="@dimen/block_padding"
        android:background="@color/lightColor"

        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>


</LinearLayout>
